--- a/KSI_data_exploration.ipynb
+++ b/KSI_data_exploration.ipynb
@@ -14,6 +14,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.read_csv('KSI.csv')"
    ]
   },
@@ -32,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.info())"
+    "df.info()"
    ]
   },
   {
@@ -41,7 +52,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.describe())"
+    "print(df.describe()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot histogram\n",
+    "df.hist(bins=50,figsize=(20,20))\n",
+    "plt.show()\n",
+    "\n",
+    "#Plot correlation matrix\n",
+    "plt.figure(figsize=(20,20))\n",
+    "sns.heatmap(df.corr(),annot=True,cmap='RdYlGn')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Double check if we need to use these columns to train the model based on the requirement\n",
+    "bool_cols = [df.columns[col] for col in range(38,51)]\n",
+    "\n",
+    "#Fill missing values with 'No' in boolean columns\n",
+    "df[bool_cols] = df[bool_cols].fillna('No')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop columns having more than 75% missing values\n",
+    "missing_percentages = (df.isnull().sum() / len(df)) * 100\n",
+    "columns_to_drop = missing_percentages[missing_percentages > 75].index\n",
+    "df = df.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From correlation matrix, we can see that 'X' and 'LONGITUDE', 'Y' and 'LATITUDE' are highly correlated. So, we can drop one of them.\n",
+    "columns_to_drop = ['X', 'Y']\n",
+    "df = df.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop columns which may not be useful for analysis based on the requirement\n",
+    "columns_to_drop = ['ObjectId', 'YEAR', 'INDEX_', 'ACCNUM', 'DATE', 'STREET1', 'STREET2', 'DISTRICT', 'WARDNUM', 'DIVISION', 'HOOD_158', 'HOOD_140', 'INJURY']\n",
+    "df = df.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In 'NEIGHBOURHOOD_140', the values contain number inside brackets. We can remove the number inside brackets.\n",
+    "df['NEIGHBOURHOOD_140'] = df['NEIGHBOURHOOD_140'].str.replace(r\"\\(.*\\)\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'TIME' format HHMM to AM_PM, so the model can know the fatality rate in the day and night."
    ]
   }
  ],
@@ -61,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
