--- a/KSI_data_exploration.ipynb
+++ b/KSI_data_exploration.ipynb
@@ -34,6 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(df.head())"
    ]
   },
@@ -101,7 +110,7 @@
    "source": [
     "# Drop columns having more than 75% missing values\n",
     "missing_percentages = (df.isnull().sum() / len(df)) * 100\n",
-    "columns_to_drop = missing_percentages[missing_percentages > 75].index\n",
+    "columns_to_drop = missing_percentages[missing_percentages > 80].index\n",
     "df = df.drop(columns=columns_to_drop)"
    ]
   },
@@ -122,8 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop columns which may not be useful for analysis based on the requirement\n",
-    "columns_to_drop = ['ObjectId', 'YEAR', 'INDEX_', 'ACCNUM', 'DATE', 'STREET1', 'STREET2', 'DISTRICT', 'WARDNUM', 'DIVISION', 'HOOD_158', 'HOOD_140', 'INJURY']\n",
+    "# Drop columns which may not be useful for analysis\n",
+    "columns_to_drop = ['ObjectId', 'INDEX_', 'ACCNUM', 'INITDIR', 'STREET1', 'STREET2', 'DISTRICT', 'WARDNUM', 'DIVISION', 'HOOD_158', 'HOOD_140', 'INJURY']\n",
+    "# 'INJURY' feature which might be dropped depends on the accuracy score of model\n",
     "df = df.drop(columns=columns_to_drop)"
    ]
   },
@@ -143,7 +153,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert 'TIME' format HHMM to AM_PM, so the model can know the fatality rate in the day and night."
+    "# Convert 'property' to 'non fatal'\n",
+    "df['ACCLASS'] = df['ACCLASS'].str.replace(\"Property Damage Only\",\"Non-Fatal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#columns <3% categorical, just drop it\n"
    ]
   }
  ],
