--- a/KSI_data_exploration.ipynb
+++ b/KSI_data_exploration.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop columns having more than 75% missing values\n",
+    "# Drop columns having more than 80% missing values\n",
     "missing_percentages = (df.isnull().sum() / len(df)) * 100\n",
     "columns_to_drop = missing_percentages[missing_percentages > 80].index\n",
     "df = df.drop(columns=columns_to_drop)"
@@ -143,8 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In 'NEIGHBOURHOOD_140', the values contain number inside brackets. We can remove the number inside brackets.\n",
-    "df['NEIGHBOURHOOD_140'] = df['NEIGHBOURHOOD_140'].str.replace(r\"\\(.*\\)\",\"\")"
+    "# In 'NEIGHBOURHOOD_140', the values contain number inside brackets. We can remove the number inside brackets and remove space before and after the string.\n",
+    "df['NEIGHBOURHOOD_140'] = df['NEIGHBOURHOOD_140'].str.replace(r\"\\(.*\\)\",\"\").str.strip()\n",
+    "df['NEIGHBOURHOOD_140']"
    ]
   },
   {
@@ -158,12 +159,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Latest Change - Pham"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#columns <3% categorical, just drop it\n"
+    "#categorical columns which have <3% missing values, we can drop them. The number is not remarkable, it won't affect the accuracy, it is just below 3%\n",
+    "df.isnull().sum()\n",
+    "cat_cols =  df.select_dtypes(include='object')\n",
+    "missing_percentages = cat_cols.isnull().sum()/len(df) * 100\n",
+    "cat_col_val_drop = missing_percentages[missing_percentages <= 3].index\n",
+    "cat_col_val_drop\n",
+    "df = df.dropna(subset=cat_col_val_drop)\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'TIME' to 'AM_PM', we can use this feature to check the percentage of accidents happened in day and night.\n",
+    "#! Note: This feature is only used for data exploration, it won't be used for training the model.\n",
+    "df['AM_PM'] = df['TIME'].apply(lambda x: 'AM' if x < 1200 else 'PM')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract 'DATE' to 'YEAR', 'MONTH', 'DAY', 'DAY_OF_WEEK'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#null values to Nan\n",
+    "df = df.fillna(value=np.nan)"
    ]
   }
  ],
