--- a/KSI_data_exploration.ipynb
+++ b/KSI_data_exploration.ipynb
@@ -126,15 +126,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mistake: Neighbourhood is identical with HoodID, drop Neighbourhood"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop columns which may not be useful for analysis\n",
-    "columns_to_drop = ['ObjectId', 'INDEX_', 'ACCNUM', 'INITDIR', 'STREET1', 'STREET2', 'DISTRICT', 'WARDNUM', 'DIVISION', 'HOOD_158', 'HOOD_140', 'INJURY']\n",
+    "columns_to_drop = ['ObjectId', 'INDEX_', 'ACCNUM', 'INITDIR', 'STREET1', 'STREET2', 'DISTRICT', 'WARDNUM', 'DIVISION', 'NEIGHBOURHOOD_158', 'NEIGHBOURHOOD_140', 'INJURY']\n",
     "# 'INJURY' feature which might be dropped depends on the accuracy score of model\n",
     "df = df.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove this"
    ]
   },
   {
@@ -144,8 +158,8 @@
    "outputs": [],
    "source": [
     "# In 'NEIGHBOURHOOD_140', the values contain number inside brackets. We can remove the number inside brackets and remove space before and after the string.\n",
-    "df['NEIGHBOURHOOD_140'] = df['NEIGHBOURHOOD_140'].str.replace(r\"\\(.*\\)\",\"\").str.strip()\n",
-    "df['NEIGHBOURHOOD_140']"
+    "#df['NEIGHBOURHOOD_140'] = df['NEIGHBOURHOOD_140'].str.replace(r\"\\(.*\\)\",\"\").str.strip()\n",
+    "#df['NEIGHBOURHOOD_140']"
    ]
   },
   {
@@ -162,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Latest Change - Pham"
+    "## Latest Update - Pham"
    ]
   },
   {
@@ -173,7 +187,7 @@
    "source": [
     "#categorical columns which have <3% missing values, we can drop them. The number is not remarkable, it won't affect the accuracy, it is just below 3%\n",
     "df.isnull().sum()\n",
-    "cat_cols =  df.select_dtypes(include='object')\n",
+    "cat_cols =  df.select_dtypes(include='object') # get only categorical columns\n",
     "missing_percentages = cat_cols.isnull().sum()/len(df) * 100\n",
     "cat_col_val_drop = missing_percentages[missing_percentages <= 3].index\n",
     "cat_col_val_drop\n",
@@ -198,7 +212,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract 'DATE' to 'YEAR', 'MONTH', 'DAY', 'DAY_OF_WEEK'"
+    "# Extract 'DATE' to 'YEAR', 'MONTH', 'DAY', 'DAY_OF_WEEK'\n",
+    "#! Note: These features are only used for data exploration, it won't be used for training the model.\n",
+    "df['DATE'] = pd.to_datetime(df['DATE']) # Convert 'DATE' to correct datetime format before extracting\n",
+    "df['MONTH'] = df['DATE'].dt.month # Get months\n",
+    "df['DAY'] = df['DATE'].dt.day # Get days\n",
+    "df['DAY_OF_WEEK'] = df['DATE'].dt.dayofweek #Get days of week\n",
+    "df = df.drop(columns=['DATE'], axis=1) # Drop 'DATE' column"
    ]
   },
   {
