--- a/KSI_data_exploration.ipynb
+++ b/KSI_data_exploration.ipynb
@@ -875,15 +875,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Ensure the 'DATE' column is in datetime format\n",
+    "# Ensuring the 'DATE' column is in datetime format\n",
     "df['DATE'] = pd.to_datetime(df['DATE'])\n",
     "\n",
-    "# Extract 'MONTH', 'DAY', and 'WEEKDAY' from the 'DATE' column\n",
-    "df['WEEKDAY'] = df['DATE'].dt.day_name()  # Extract day of the week\n",
-    "df['DAY'] = df['DATE'].dt.day  # Extract day\n",
-    "df['MONTH'] = df['DATE'].dt.month_name()  # Extract month\n",
+    "# Extracting 'MONTH', 'DAY', and 'WEEKDAY' from the 'DATE' column\n",
+    "df['WEEKDAY'] = df['DATE'].dt.day_name()  # Extracting day of the week\n",
+    "df['DAY'] = df['DATE'].dt.day  # Extracting day\n",
+    "df['MONTH'] = df['DATE'].dt.month_name()  # Extracting month\n",
     "\n",
-    "# Now you can plot the number of accidents by month\n",
     "df['MONTH'].value_counts().reindex(['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']).plot(kind='bar', figsize=(10, 6))\n",
     "plt.title('Number of Accidents by Month')\n",
     "plt.xlabel('Month')\n",
@@ -909,14 +908,14 @@
     }
    ],
    "source": [
-    "# Count the number of accidents by day of the week\n",
+    "# Counting the number of accidents by day of the week\n",
     "accidents_by_weekday = df['WEEKDAY'].value_counts()\n",
     "\n",
     "# Plotting pie chart for accidents by day of the week\n",
     "plt.figure(figsize=(8, 8))\n",
     "accidents_by_weekday.plot(kind='pie', autopct='%1.1f%%', startangle=140)\n",
     "plt.title('Accidents Distribution by Day of the Week')\n",
-    "plt.ylabel('')  # Hide the y-label as it's not needed for pie charts\n",
+    "plt.ylabel('')  # Hiding the y-label as it's not needed for pie charts\n",
     "plt.show()\n"
    ]
   },
